Wed Feb 18 16:03:37 1998  Larry Jones  <larry.jones@sdrc.com>

	* admin.c (admin_fileproc): Convert -b argument from symbolic name
	to revision number before storing in the RCS file.
	* rcs.c (RCS_whatbranch): Allow numeric as well as symbolic revision.
	(RCS_getversion): Take advantage of above.
	* sanity.sh (admin): Add/revise/renumber admin-10c, admin-11a,
	admin-12, and admin-12a to check above.

	* commmit.c (lock_RCS): Minor clean-up.

	* sanity.sh (abspath-6a): Don't depend on the sepcific contents of
	CVSROOT, it depends on which other tests have been run.

Wed Feb 18 01:56:04 1998  Ian Lance Taylor  <ian@cygnus.com>

	* rcs.c (putsymbol_proc): Use putc and fputs rather than fprintf.
	(RCS_putadmin): Don't call RCS_symbols if the symbols have not yet
	been converted to a list.

	* rcs.c (rcsbuf_cache, rcsbuf_cache_open, rcsbuf_cache_close): New
	static functions to avoid closing and reopening the RCS file.
	(cached_rcs, cached_rcsbuf): New static variables.
 	(RCS_parse): Call rcsbuf_cache_close.  Don't call fclose.
	(RCS_parsercsfile): Likewise.
	(RCS_parsercsfile_i): Call rcsbuf_cache rather than
	rcsbuf_close.  Call fclose on error.  Remove comment about
	inefficiency of opening file twice.
	(RCS_reparsercsfile): Call rcsbuf_cache_open rather than fopen and
	rcsbuf_open.  Call rcsbuf_cache rather than rcsbuf_close and
	fclose.
	(RCS_fully_parse, RCS_checkout, RCS_deltas): Likewise.
	(RCS_rewrite): Likewise.
	(RCS_checkin): Call rcsbuf_cache_close.

	* rcs.c (RCS_copydeltas): Fix code which checks for an extra
	newline in buffered data.

	* rcs.c (rcsbuf_getkey): Save an indirection by using start rather
	than *valp when trimming trailing whitespace from value.

	* rcs.c (rcsbuf_get_buffered): New static function.
	(RCS_copydeltas): After we have done all the required special
 	actions, and inserted any new revision, just copy the file bytes
 	directly, rather than interpreting all the data.
	(count_delta_actions): New static function.